--- a/source/templates/redirects.erb
+++ b/source/templates/redirects.erb
@@ -1,3 +1,6 @@
+---
+layout: raw_without_body
+---
 <% redirects.each do |r| %>
 <%= r[:from].gsub(/(.+)\/index\.html/, '\1').gsub('index.html', '') %> <%= "#{r[:to].gsub('/index.html', '').gsub(/\/$/, '')}/" %>
 <% end %>
